Fixed! too narrow on mobile

--- a/Profile/client/styles/Imports/macaw.import.styl
+++ b/Profile/client/styles/Imports/macaw.import.styl
@@ -23,7 +23,7 @@
   background-size: cover
   background-position: 50% 30%
 
-@media (max-width: 1000px)
+@media (max-width: 1200px)
   .callout-box
     position: relative
     z-index: 3
@@ -33,6 +33,14 @@
     position: relative
     z-index: 0
     height: 427px
+
+@media (max-width: 992px)
+  .callout-box
+    position: relative
+    z-index: 3
+    margin-left: 10%
+    width: 80%
+
 
 // Project Cards
 img_cover_mixin(url, top_spacing)
